# acton-ai

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PRD.md  README.md  build.rs
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
docs/: README.md  next.config.mjs  package.json  pnpm-lock.yaml
docs/src/app/: layout.tsx  page.md
docs/src/app/docs/actor-model-for-ai/: page.md
docs/src/app/docs/api-acton-ai/: page.md
docs/src/app/docs/api-builtin-tools/: page.md
docs/src/app/docs/api-conversation/: page.md
docs/src/app/docs/api-prompt-builder/: page.md
docs/src/app/docs/architecture-overview/: page.md
docs/src/app/docs/code-standards/: page.md
docs/src/app/docs/conversation-management/: page.md
docs/src/app/docs/development-setup/: page.md
docs/src/app/docs/error-handling/: page.md
docs/src/app/docs/installation/: page.md
docs/src/app/docs/multi-agent-collaboration/: page.md
docs/src/app/docs/providers-and-configuration/: page.md
docs/src/app/docs/sandbox/: page.md
docs/src/app/docs/secure-tool-execution/: page.md
docs/src/app/docs/testing/: page.md
docs/src/app/docs/tools-and-streaming/: page.md
docs/src/app/docs/two-api-levels/: page.md
docs/src/components/: Button.tsx  Callout.tsx  DocsHeader.tsx  Hero.tsx  HeroBackground.tsx  Icon.tsx  Layout.tsx  Logo.tsx  Navigation.tsx  Prose.tsx  QuickLinks.tsx  Search.tsx  TableOfContents.tsx  ThemeSelector.tsx
docs/src/lib/: navigation.ts  sections.ts
docs/src/markdoc/: nodes.js
docs/src/styles/: prism.css
examples/: .env.example  acton-ai.toml  agent_skills.rs  bash_sandbox.rs  conversation.rs  multi_agent.rs  multi_provider.rs  ollama_chat.rs  ollama_chat_advanced.rs  ollama_tools.rs  per_agent_tools.rs  process_sandbox.rs
examples/skills/: code-review.md  debugging.md  sample_code.rs
guests/: Cargo.toml
guests/http_guest/: Cargo.toml
guests/http_guest/src/: lib.rs
guests/shell_guest/: Cargo.toml
guests/shell_guest/src/: lib.rs
src/: agents.rs  conversation.rs  error.rs  facade.rs  lib.rs  llm_clients.rs  main.rs  messages.rs  persistence.rs  prompt.rs  stream.rs  tools.rs
src/agent/: actor.rs  config.rs  delegation.rs  mod.rs  state.rs
src/agents/: agent_manager.rs  ai_agent.rs  common.rs  executor_agent.rs  guardrail_agent.rs  hil_agent.rs  instrumentation_agent.rs  memory_agent.rs  model_agent.rs  orchestrator_agent.rs  planner_agent.rs  tool_agent.rs  user_agent.rs
src/cli/: error.rs  mod.rs  output.rs  runtime.rs
src/cli/chat_ui/: banner.rs  mod.rs  render.rs  slash.rs  spinner.rs  style.rs  tool_render.rs
src/cli/commands/: chat.rs  heartbeat.rs  mod.rs  run_job.rs  session.rs
src/config/: file.rs  mod.rs  types.rs
src/kernel/: actor.rs  config.rs  discovery.rs  logging.rs  mod.rs
src/llm/: anthropic.rs  client.rs  config.rs  error.rs  mod.rs  openai.rs  provider.rs  streaming.rs
src/memory/: context.rs  embeddings.rs  error.rs  mod.rs  persistence.rs  store.rs
src/messages/: mod.rs  types.rs
src/persistence/: memory_store.rs
src/persistence/impls/: in_memory.rs
src/skills/: mod.rs  registry.rs  types.rs
src/tools/: actor.rs  definition.rs  error.rs  executor.rs  mod.rs  registry.rs  sandbox.rs
src/tools/builtins/: bash.rs  calculate.rs  edit_file.rs  glob.rs  grep.rs  list_directory.rs  mod.rs  read_file.rs  rust_code.rs  skill_activate.rs  skill_list.rs  web_fetch.rs  write_file.rs
src/tools/compiler/: cache.rs  error.rs  mod.rs  template.rs
src/tools/sandbox/: mod.rs  stub.rs  traits.rs
src/tools/sandbox/hyperlight/: config.rs  error.rs  factory.rs  guest.rs  mod.rs  pool.rs  provider.rs  sandbox.rs
src/tools/sandbox/process/: config.rs  factory.rs  hardening.rs  mod.rs  protocol.rs  runner.rs  sandbox.rs
src/tools/security/: mod.rs  path.rs
src/types/: agent_id.rs  conversation_id.rs  correlation_id.rs  memory_id.rs  message_id.rs  mod.rs  task_id.rs  tool_name.rs
tests/: chat_cli_feature_gate.rs  chat_cli_skill_dir.rs  integration_test.rs  process_sandbox_integration.rs
