[package]
name = "acton-ai"
version = "0.2.0"
edition = "2021"
description = "An agentic AI framework where each agent is an actor"
license = "MIT"
repository = "https://github.com/rodzilla/acton-ai"
keywords = ["ai", "agents", "actors", "llm", "async"]
categories = ["asynchronous", "concurrency"]

[dependencies]
# Actor framework
acton-reactive = "7"

# Async runtime (re-exported by acton-reactive, but explicit for clarity)
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Identifiers
mti = "1.1"
uuid = { version = "1", features = ["v4", "v7"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for LLM API calls
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async utilities
futures = "0.3"
async-stream = "0.3"

# Persistence (deferred to Phase 4, but adding now)
# libsql = "0.6"

[dev-dependencies]
tokio-test = "0.4"
