[package]
name = "acton-ai"
version = "0.17.4"
edition = "2021"
description = "An agentic AI framework where each agent is an actor"
license = "MIT"
repository = "https://github.com/rodzilla/acton-ai"
keywords = ["ai", "agents", "actors", "llm", "async"]
categories = ["asynchronous", "concurrency"]

[features]
default = []
hyperlight = ["dep:hyperlight-host"]
agent-skills = ["dep:agent-skills"]

[dependencies]
# Actor framework (re-exports tokio)
acton-reactive = "7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Identifiers (re-exports uuid)
mti = "1.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for LLM API calls
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async utilities
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1.89"

# Configuration
toml = "0.8"
libsql = "0.9"
dirs = "6"
tracing-appender = "0.2"
chrono = "0.4.43"

# Built-in tools
glob = "0.3"
walkdir = "2"
fasteval = "0.2"
regex = "1"
url = "2"

# Sandboxing (optional)
hyperlight-host = { version = "0.12", optional = true }
agent-skills = { version = "0.2.0", optional = true }

[dev-dependencies]
anyhow = "1.0.100"
colored = "3.1.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"
tempfile = "3"
