[package]
name = "acton-ai"
version = "0.28.0"
edition = "2021"
description = "An agentic AI framework where each agent is an actor"
license = "MIT"
repository = "https://github.com/rodzilla/acton-ai"
keywords = ["ai", "agents", "actors", "llm", "async"]
categories = ["asynchronous", "concurrency"]
include = [
    "src/**/*",
    "build.rs",
    "README.md",
    "LICENSE",
    "!docs/**/*",
]

[features]
default = ["sandbox-hardening"]
# Enables Linux-specific OS hardening (landlock + seccomp) for the process
# sandbox child. A no-op on non-Linux platforms.
sandbox-hardening = ["dep:landlock", "dep:seccompiler", "dep:libc"]

[dependencies]
# Actor framework (re-exports tokio)
acton-reactive = "8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Identifiers (re-exports uuid)
mti = "1.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for LLM API calls
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "blocking", "rustls-tls"] }

# Async utilities
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1.89"

# Configuration
toml = "0.8"
libsql = "0.9"
dirs = "6"
chrono = "0.4.43"

# Built-in tools
glob = "0.3"
walkdir = "2"
fasteval = "0.2"
regex = "1"
url = "2"

agent-skills = "0.2.0"
clap = { version = "4.6.0", features = ["derive", "env"] }
rlimit = "0.11.0"
tempfile = "3"
tracing-journald = "0.3.2"
tiktoken-rs = "0.11.0"
reedline = "0.47.0"
indicatif = "0.18.4"
strsim = "0.11.1"
termimad = "0.34.1"

[dev-dependencies]
anyhow = "1.0.100"
colored = "3.1.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = { version = "0.4.4", optional = true }
libc = { version = "0.2.186", optional = true }
seccompiler = { version = "0.5.0", optional = true }

[target."cfg(unix)".dependencies]
nix = { version = "0.31.2", features = ["signal"] }
